--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -101,14 +101,15 @@ ion-icon {
     bottom: 0;
     padding: 0 15px;
     z-index: 5;
-    background-color: #ffffff;
-    border-right: 1px solid #e2e3e4;
-    border-bottom: 0px solid #e4e4e4;
+    background-color: transparent;
+    border-right: none;
+    border-bottom: none;
     transition: all .2s;
 }
 
 .sidebar-wrapper .sidebar-header .logo-icon {
-    width: 30px;
+    height: 48px;
+    width: auto;
 }
 
 .sidebar-wrapper .sidebar-header .logo-text {
@@ -322,7 +323,7 @@ ion-icon {
     padding: 0 1.5rem;
     border-bottom: 1px solid rgba(233, 236, 239, 0);
     background-clip: border-box;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     z-index: 5;
     transition: 0.3s all;
     box-shadow: none;
@@ -380,20 +381,20 @@ ion-icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #ffffff;
+    /* width: 35px; */
+    /* height: 35px; */
+    /* border-radius: 50%; */
+    /* background-color: #ffffff; */
     margin: 0 2px;
 }
 
 .top-header .navbar .top-navbar-right .nav-item:hover {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
 }
 
 .top-header .navbar .top-navbar-right .nav-link {
-    color: #293445;
-    font-size: 18px;
+    /* color: #293445; */
+    /* font-size: 18px; */
     font-weight: 500;
     padding-right: .7rem;
     padding-left: .7rem;
@@ -420,8 +421,8 @@ ion-icon {
 }
 
 .top-header .navbar .user-img {
-    width: 30px;
-    height: 30px;
+    /* width: 30px; */
+    /* height: 30px; */
     padding: 0px;
     border-radius: 50%;
 }
